Change the command name of stop Bungeecord